lsp_tg_errors.txt
warning: unused imports: `DerefMut` and `Deref`
 --> gridmesh\src\tensor.rs:3:16
  |
3 | use std::ops::{Deref, DerefMut};
  |                ^^^^^  ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `gridmesh` (lib) generated 1 warning (run `cargo fix --lib -p gridmesh` to apply 1 suggestion)
warning: unused import: `anyhow`
 --> src\compiler.rs:6:14
  |
6 | use anyhow::{anyhow, Result};
  |              ^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::process::Command`
 --> src\compiler.rs:8:5
  |
8 | use std::process::Command;
  |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `take_while1` and `tuple`
 --> src\interface\parser.rs:3:28
  |
3 |     bytes::complete::{tag, take_while1},
  |                            ^^^^^^^^^^^
...
7 |     sequence::{delimited, pair, preceded, tuple},
  |                                           ^^^^^

warning: unused import: `Param`
 --> src\languages\python\mod.rs:3:49
  |
3 | ...Options, FunctionSig, Param, WitType};
  |                          ^^^^^

warning: unused import: `Param`
 --> src\languages\rust\mod.rs:3:49
  |
3 | ...Options, FunctionSig, Param, WitType};
  |                          ^^^^^

warning: unused import: `FunctionSig`
 --> src\wit_gen.rs:5:20
  |
5 | use crate::types::{FunctionSig, WitType};
  |                    ^^^^^^^^^^^

warning: use of deprecated function `nom::sequence::tuple`: `Parser` is directly implemented for tuples
 --> src\interface\parser.rs:7:43
  |
7 |     sequence::{delimited, pair, preceded, tuple},
  |                                           ^^^^^
  |
  = note: `#[warn(deprecated)]` on by default

warning: unused variable: `i`
  --> src\compiler.rs:32:10
   |
32 |     for (i, block) in parsed.blocks.iter().enumerate...
   |          ^ help: if this is intentional, prefix it with an underscore: `_i`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `opts`
  --> src\compiler.rs:58:38
   |
58 | ...les: &[Vec<u8>], opts: &CompileOptions) -> Result...
   |                     ^^^^ help: if this is intentional, prefix it with an underscore: `_opts`

warning: unused variable: `remaining`
  --> src\interface\parser.rs:68:10
   |
68 |     let (remaining, items) = many0(preceded(
   |          ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_remaining`

warning: function `parse_struct` is never used
  --> src\interface\parser.rs:81:4
   |
81 | fn parse_struct(input: &str) -> IResult<&str, Struct...
   |    ^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: function `parse_field` is never used
   --> src\interface\parser.rs:102:4
    |
102 | fn parse_field(input: &str) -> IResult<&str, Field> {
    |    ^^^^^^^^^^^

warning: method `to_lang_type` is never used
  --> src\languages\python\mod.rs:16:8
   |
11 | impl Python {
   | ----------- method in this implementation
...
16 |     fn to_lang_type(&self, wit_type: &WitType, optio...
   |        ^^^^^^^^^^^^

warning: `polyglot` (lib) generated 13 warnings (run `cargo fix --lib -p polyglot` to apply 9 suggestions)
    Checking poly-lsp v0.1.0 (C:\Users\adria\Downloads\pyrs polygot\pyrs\poly-lsp)
error[E0252]: the name `VirtualFile` is defined multiple times
 --> poly-lsp\src\type_graph.rs:2:5
  |
1 | use crate::virtual_fs::VirtualFile;
  |     ------------------------------ previous import of the type `VirtualFile` here
2 | use crate::virtual_fs::VirtualFile;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `VirtualFile` reimported here
  |
  = note: `VirtualFile` must be defined only once in the type namespace of this module

warning: unused import: `anyhow`
 --> poly-lsp\src\json_rpc.rs:1:22
  |
1 | use anyhow::{Result, anyhow};
  |                      ^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `crate::virtual_fs::VirtualFile`
 --> poly-lsp\src\type_graph.rs:2:5
  |
2 | use crate::virtual_fs::VirtualFile;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0063]: missing field `code_description` in initializer of `tower_lsp::lsp_types::Diagnostic`
   --> poly-lsp\src\type_graph.rs:241:34
    |
241 |                 diagnostics.push(Diagnostic {
    |                                  ^^^^^^^^^^ missing `code_description`

error[E0063]: missing field `code_description` in initializer of `tower_lsp::lsp_types::Diagnostic`
   --> poly-lsp\src\type_graph.rs:261:38
    |
261 |                     diagnostics.push(Diagnostic {
    |                                      ^^^^^^^^^^ missing `code_description`

error[E0277]: `TypeGraph` doesn't implement `Debug`
  --> poly-lsp\src\main.rs:23:5
   |
17 | #[derive(Debug)]
   |          ----- in this derive macro expansion
...
23 |     type_graph: Arc<Mutex<type_graph::TypeGraph>>,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Debug` is not implemented for `TypeGraph`
   |
   = note: add `#[derive(Debug)]` to `TypeGraph` or manually `impl Debug for TypeGraph`
   = help: the trait `Debug` is implemented for `Arc<T, A>`
help: consider annotating `TypeGraph` with `#[derive(Debug)]`
  --> poly-lsp\src\type_graph.rs:15:1
   |
15 + #[derive(Debug)]
16 | pub struct TypeGraph {
   |

warning: unused variable: `text`
  --> poly-lsp\src\type_graph.rs:39:33
   |
39 |     pub fn scan_file(&mut self, text: &str, vfiles: &[VirtualFile]) {
   |                                 ^^^^ help: if this is intentional, prefix it with an underscore: `_text`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

error[E0505]: cannot move out of `name` because it is borrowed
   --> poly-lsp\src\type_graph.rs:163:21
    |
129 |             let name = name_node
    |                 ---- binding `name` declared here
...
159 |             self.add_implementation(
    |                  ------------------ borrow later used by call
160 |                 &name,
    |                 ----- borrow of `name` occurs here
...
163 |                     name,
    |                     ^^^^ move out of `name` occurs here
    |
help: consider cloning the value if the performance cost is acceptable
    |
160 |                 &name.clone(),
    |                      ++++++++

error[E0505]: cannot move out of `name` because it is borrowed
   --> poly-lsp\src\type_graph.rs:222:21
    |
190 |             let name = name_node
    |                 ---- binding `name` declared here
...
218 |             self.add_implementation(
    |                  ------------------ borrow later used by call
219 |                 &name,
    |                 ----- borrow of `name` occurs here
...
222 |                     name,
    |                     ^^^^ move out of `name` occurs here
    |
help: consider cloning the value if the performance cost is acceptable
    |
219 |                 &name.clone(),
    |                      ++++++++

error[E0382]: use of moved value: `params.text_document.uri`
   --> poly-lsp\src\main.rs:157:21
    |
134 |             params.text_document.uri, 
    |             ------------------------ value moved here
...
157 |                     params.text_document.uri,
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^ value used here after move
    |
    = note: move occurs because `params.text_document.uri` has type `Url`, which does not implement the `Copy` trait

Some errors have detailed explanations: E0063, E0252, E0277, E0382, E0505.
For more information about an error, try `rustc --explain E0063`.
warning: `poly-lsp` (bin "poly-lsp") generated 3 warnings
error: could not compile `poly-lsp` (bin "poly-lsp") due to 7 previous errors; 3 warnings emitted
